2010-03-05	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* MacOS X: App bundles now use CoreFoundation API to detect resource path
	  instead of it being hard-coded into the application.
	* Fixed bugs:
	  #2962438 The BG and SI credits use the wrong palette
	  #2961649 Party flickers when walking and infravision or invisible

2010-03-04 Ryan Nunn <colourles@users.sourceforge.net>
	* msvcstuff/msvc_kludges.h: Updating to reflect current code
	* version.cc: Added Windows Vista and Windows 7 to the list of detected windows versions

2010-03-03 Dominik Reichardt <dominus@users.sourceforge.net>
	* exult.cc: look for data folder in .app bundle as well on Mac OS X (and changed the copyright date)
	
2010-02-25	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bugs:
	  #2958487 HQx3 is only scaled to 2x when set in Exult menu
	  #2813106 ES won'tt save frame powers when they don't previously exist
	* ES: Eliminated a few warnings, including Gtk+ stderr runtime warnings.
	  Added missing handlers and missing export. Fixed a few minimum values of
	  spin buttons.

2010-02-24	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bugs:
	  #2179006 Sleeping on the Floor (BG/SI)
	  #2798862 Unconcious enemies stand up for a second before dieing
	  #2796857 SI(?): Sleeping in beds not working correctly
	* General: Eliminated a few warnings.

2010-02-23	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bugs:
	  #2912644 Black rain
		Rain drops/snow flakes/magic sparkle now use shape 0 from sprites.vga.
		Rain drops are frames 3 to 7 (7 being a "splash" frame of sorts which
		looks very nice), snow flakes are frames 13 to 20 and magic sparkle are
		frames 21 to 27.
	  #2798881 guards in goblin valley
	  #2838851 Notebook gump crashes Exult when text is dragged offscreen
	  #2838850 Notebook text is duplicated to the sides of the gump
	  #2805775 Formation is still forced to yes for testing
	  #2957048 Exult.cfg contains absolute paths on Win32